Closed Bug 240340 Opened 22 years ago Closed 22 years ago

Key events broken in plugins on MacOSX

Categories

(Core Graveyard :: Plug-ins, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.7final

People

(Reporter: jst, Assigned: jst)

References

()

Details

(Keywords: fixed1.7, regression)

Attachments

(1 file)

Bug 233142 regressed key events (among other events, see bug 238449) in plugins, especially on Mac OSX. The old assumption that returning an error code from event code prevented the events default action is no longer true, most of the plugin frame code played nice, but not all of it. Patch coming up.
Attachment #145956 - Flags: superreview?(bryner)
Attachment #145956 - Flags: review?(bryner)
Status: NEW → ASSIGNED
Flags: blocking1.7?
Target Milestone: --- → mozilla1.7final
Attachment #145956 - Flags: superreview?(bryner)
Attachment #145956 - Flags: superreview+
Attachment #145956 - Flags: review?(bryner)
Attachment #145956 - Flags: review+
Comment on attachment 145956 [details] [diff] [review] PreventDefault() where needed, and no more bogus error returns Requesting approval for this plugin event regression.
Attachment #145956 - Flags: approval1.7?
Fix checked in on the trunk.
Comment on attachment 145956 [details] [diff] [review] PreventDefault() where needed, and no more bogus error returns a=asa (on behalf of drivers) for checkin to 1.7
Attachment #145956 - Flags: approval1.7? → approval1.7+
Fixed on the 1.7 branch now too!
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Keywords: fixed1.7
Resolution: --- → FIXED
Flags: blocking1.7?
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: