Fixing bug 240340. Make key events in plugins work correctly again on the Mac. r+sr=bryner@brianryner.com